<resources>
    <string name="app_name">Yummy Recipes</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">981144131963736</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="addRecipeButton">Add Your Recipe</string>
    <string name="Method">Method:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="recipeName">Recipe Name:</string>
    <string name="preparationTime">Preparation Time(Minutes):</string>
    <string name="commentsHeading">Comments:</string>
    <string name="serves">Serves:</string>
    <string name="takePictureButton">Take Picture</string>
    <string name="saveRecipeButton">Save Recipe</string>
    <string name="likeButton">Like</string>
    <string name="comment">Comment</string>
    <string name="enterComment">Enter Comment Here.</string>
    <string name="submitCommentButton">Submit</string>
    <string name="likesDisplay">Total Likes: </string>
    <string name="title_activity_add_recipe">Add Your Recipe</string>
    <string name="title_activity_nav">NavActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>

    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>

    <string name="label_name">Name</string>
    <string name="label_email">Enter Email</string>
    <string name="label_password">Enter Password</string>
    <string name="label_password_confirm">Retype password</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_login_facebook">Login with Facebook</string>
    <string name="button_login_twitter">Login with Twitter</string>
    <string name="button_submit">Submit</string>

    <string name="activity_registration">Yummy Recipe Registration</string>
    <string name="activity_login">Yummy Recipe Login</string>
    <string name="divider_or">OR</string>
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="register_link">Register</string>
    <string name="title_activity_add_comment">Recipe Name</string>
    <string name="title_activity_my_recipe">MyRecipeActivity</string>

</resources>
