<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="fill_parent"
    android:id="@+id/scrollViewRegister"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registration"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"/>

    <View
        android:id="@+id/viewOne"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/headingText"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_orange_light" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/passwordConfirmField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/label_password_confirm"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:ems="8"
        android:singleLine="false"
        android:text="@string/button_register" />

</LinearLayout>
</ScrollView>