<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="fill_parent"
    android:id="@+id/scrollViewLogin"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
  >

    <TextView
        android:id="@+id/headingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewOne"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/headingText"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_orange_light" />


    <EditText
        android:id="@+id/emailField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:hint="@string/label_email"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray"/>

     <EditText
        android:id="@+id/passwordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailField"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:hint="@string/label_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:background="@android:color/holo_green_dark"
        android:ems="8"
        android:text="@string/button_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/registerPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:paddingBottom="@dimen/view_vertical_margin"
        android:paddingTop="@dimen/view_vertical_margin"
        android:text="@string/register_prompt"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/holo_green_light"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:id="@+id/viewTwo"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:background="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:text="@string/divider_or"
            android:textColor="@android:color/white"
            android:textStyle="italic" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:background="@android:color/holo_orange_light" />
    </LinearLayout>


    <Button
        android:id="@+id/loginFacebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewTwo"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:background="#303F9F"
        android:ems="12"
        android:text="@string/button_login_facebook"
        android:textColor="@android:color/white" />

    <!--<Button-->
        <!--android:id="@+id/loginTwitterButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/loginFacebookButton"-->
        <!--android:layout_marginBottom="@dimen/view_vertical_margin"-->
        <!--android:layout_marginTop="@dimen/view_vertical_margin"-->
        <!--android:background="@android:color/holo_blue_light"-->
        <!--android:ems="12"-->
        <!--android:text="@string/button_login_twitter"-->
        <!--android:textColor="@android:color/white" />-->
</LinearLayout>
</ScrollView>
