<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewRecipeDetail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.scu.rachna.yummyrecipes.activity.RecipeDetailActivity"
        tools:showIn="@layout/activity_recipe_detail">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:paddingTop="60dp"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/recipeNameHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeImage"
            android:text="@string/recipeName" />

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/recipeNameHeading"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/recipeName" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/prepTimeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeName"
            android:text="@string/preparationTime" />

        <TextView
            android:id="@+id/prepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/prepTimeHeading"
            android:ems="10"
            android:text="@string/preparationTime" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/servesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prepTime"
            android:text="@string/serves" />

        <TextView
            android:id="@+id/serves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/servesHeading"
            android:ems="10"
            android:text="@string/serves" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/recipeIngredientsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serves"
            android:text="@string/ingredients" />

        <TextView
            android:id="@+id/recipeIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/recipeIngredientsHeading"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/ingredients" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/methodHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeIngredients"
            android:text="@string/Method" />

        <TextView
            android:id="@+id/recipeMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/methodHeading"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/Method" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/likeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeMethod"
            android:text="@string/likesDisplay" />

        <TextView
            android:id="@+id/likesDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/likeHeading"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/likesDisplay" />

    </RelativeLayout>
</ScrollView>
